--- a/archives/toutiao-search/2024-01-02.md
+++ b/archives/toutiao-search/2024-01-02.md
@@ -1,59 +1,70 @@
 # 2024-01-02
 
-共 61 条
+共 72 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Jan 02 2024 01:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Jan 02 2024 02:00:44 GMT+0800 (China Standard Time) -->
+1. [驻日使馆提醒同胞防范地震海啸灾害](https://so.toutiao.com/search?keyword=驻日使馆提醒同胞防范地震海啸灾害)
 1. [售价35.98万起 小鹏X9上市](https://so.toutiao.com/search?keyword=售价35.98万起+小鹏X9上市)
-1. [网红欧可爱车祸溺水离世](https://so.toutiao.com/search?keyword=网红欧可爱车祸溺水离世)
 1. [他们在坚守奋斗中开启新年](https://so.toutiao.com/search?keyword=他们在坚守奋斗中开启新年)
 1. [无人机表演取消 主办方下跪致歉](https://so.toutiao.com/search?keyword=无人机表演取消+主办方下跪致歉)
-1. [跨年晚会收视率](https://so.toutiao.com/search?keyword=跨年晚会收视率)
+1. [网红欧可爱车祸溺水离世](https://so.toutiao.com/search?keyword=网红欧可爱车祸溺水离世)
 1. [广东一乡镇公示8名“躺平休闲人员”](https://so.toutiao.com/search?keyword=广东一乡镇公示8名“躺平休闲人员”)
-1. [世界第一高楼上演新年烟花灯光秀](https://so.toutiao.com/search?keyword=世界第一高楼上演新年烟花灯光秀)
 1. [各卫视跨年晚会名场面](https://so.toutiao.com/search?keyword=各卫视跨年晚会名场面)
+1. [路边摊麻辣烫一碗106元](https://so.toutiao.com/search?keyword=路边摊麻辣烫一碗106元)
 1. [“小土豆”往老虎脸上撒雪](https://so.toutiao.com/search?keyword=“小土豆”往老虎脸上撒雪)
 1. [枕着湿发睡觉易致癌？真相来了](https://so.toutiao.com/search?keyword=枕着湿发睡觉易致癌？真相来了)
-1. [震后日本称“尚未发现核电站异常”](https://so.toutiao.com/search?keyword=震后日本称“尚未发现核电站异常”)
+1. [日本强震：迪士尼游客蹲地避难](https://so.toutiao.com/search?keyword=日本强震：迪士尼游客蹲地避难)
 1. [日本华人讲述地震灾情](https://so.toutiao.com/search?keyword=日本华人讲述地震灾情)
 1. [日本一地火山喷发](https://so.toutiao.com/search?keyword=日本一地火山喷发)
-1. [日本强震：迪士尼游客蹲地避难](https://so.toutiao.com/search?keyword=日本强震：迪士尼游客蹲地避难)
+1. [震后日本称“尚未发现核电站异常”](https://so.toutiao.com/search?keyword=震后日本称“尚未发现核电站异常”)
 1. [美军：击沉三艘胡塞船只无人生还](https://so.toutiao.com/search?keyword=美军：击沉三艘胡塞船只无人生还)
-1. [香港史上最强跨年烟花12分钟](https://so.toutiao.com/search?keyword=香港史上最强跨年烟花12分钟)
+1. [跨年晚会收视率](https://so.toutiao.com/search?keyword=跨年晚会收视率)
 1. [官方：日本地震不影响我国沿岸](https://so.toutiao.com/search?keyword=官方：日本地震不影响我国沿岸)
-1. [路边摊麻辣烫一碗106元](https://so.toutiao.com/search?keyword=路边摊麻辣烫一碗106元)
-1. [武汉江滩雕塑“一孩变三孩”](https://so.toutiao.com/search?keyword=武汉江滩雕塑“一孩变三孩”)
-1. [日本石川7.4级地震引发5米海啸](https://so.toutiao.com/search?keyword=日本石川7.4级地震引发5米海啸)
-1. [和中国军人一起开启2024](https://so.toutiao.com/search?keyword=和中国军人一起开启2024)
-1. [《繁花》致敬的宁波帮是个什么帮](https://so.toutiao.com/search?keyword=《繁花》致敬的宁波帮是个什么帮)
-1. [日本强震地区发生火灾](https://so.toutiao.com/search?keyword=日本强震地区发生火灾)
 1. [美国女子遭家暴报警求助被击毙](https://so.toutiao.com/search?keyword=美国女子遭家暴报警求助被击毙)
-1. [全新凯美瑞开启预售 17.38万起](https://so.toutiao.com/search?keyword=全新凯美瑞开启预售+17.38万起)
+1. [武汉江滩雕塑“一孩变三孩”](https://so.toutiao.com/search?keyword=武汉江滩雕塑“一孩变三孩”)
 1. [在日华人谈7.4级地震](https://so.toutiao.com/search?keyword=在日华人谈7.4级地震)
-1. [胡歌给头条网友送新年祝福](https://so.toutiao.com/search?keyword=胡歌给头条网友送新年祝福)
-1. [一代神车桑塔纳月销仅1辆](https://so.toutiao.com/search?keyword=一代神车桑塔纳月销仅1辆)
+1. [2024年多项民生措施将推出](https://so.toutiao.com/search?keyword=2024年多项民生措施将推出)
+1. [香港史上最强跨年烟花12分钟](https://so.toutiao.com/search?keyword=香港史上最强跨年烟花12分钟)
+1. [日本石川7.4级地震引发5米海啸](https://so.toutiao.com/search?keyword=日本石川7.4级地震引发5米海啸)
 1. [新郎父亲怕新娘冻着为她披上衣服](https://so.toutiao.com/search?keyword=新郎父亲怕新娘冻着为她披上衣服)
-1. [加沙民众：新年“烟花表演”是导弹](https://so.toutiao.com/search?keyword=加沙民众：新年“烟花表演”是导弹)
+1. [《繁花》剧组亮相东方卫视跨年](https://so.toutiao.com/search?keyword=《繁花》剧组亮相东方卫视跨年)
+1. [日本强震地区发生火灾](https://so.toutiao.com/search?keyword=日本强震地区发生火灾)
+1. [胡歌给头条网友送新年祝福](https://so.toutiao.com/search?keyword=胡歌给头条网友送新年祝福)
 1. [凤凰传奇高潮一响统一全场](https://so.toutiao.com/search?keyword=凤凰传奇高潮一响统一全场)
-1. [安徽卫视国剧盛典](https://so.toutiao.com/search?keyword=安徽卫视国剧盛典)
-1. [日本：已接到至少10起人员被埋通报](https://so.toutiao.com/search?keyword=日本：已接到至少10起人员被埋通报)
-1. [跨年晚会3大卫视集体“翻车”](https://so.toutiao.com/search?keyword=跨年晚会3大卫视集体“翻车”)
+1. [一代神车桑塔纳月销仅1辆](https://so.toutiao.com/search?keyword=一代神车桑塔纳月销仅1辆)
 1. [金正恩：朝韩关系完全敌对](https://so.toutiao.com/search?keyword=金正恩：朝韩关系完全敌对)
-1. [美媒：拜登悄悄转变对乌克兰战略](https://so.toutiao.com/search?keyword=美媒：拜登悄悄转变对乌克兰战略)
+1. [范志毅也出现在了《繁花》里](https://so.toutiao.com/search?keyword=范志毅也出现在了《繁花》里)
+1. [安徽卫视国剧盛典](https://so.toutiao.com/search?keyword=安徽卫视国剧盛典)
+1. [2024年1月8款新车将上市](https://so.toutiao.com/search?keyword=2024年1月8款新车将上市)
+1. [跨年晚会3大卫视集体“翻车”](https://so.toutiao.com/search?keyword=跨年晚会3大卫视集体“翻车”)
+1. [理想L9和问界M9配置对比](https://so.toutiao.com/search?keyword=理想L9和问界M9配置对比)
+1. [以色列“强硬表态”能带来什么](https://so.toutiao.com/search?keyword=以色列“强硬表态”能带来什么)
 1. [女生误把电焊条当成仙女棒](https://so.toutiao.com/search?keyword=女生误把电焊条当成仙女棒)
+1. [外媒：2024年全球经济来到十字路口](https://so.toutiao.com/search?keyword=外媒：2024年全球经济来到十字路口)
+1. [比亚迪：12月新能源车销量34.1万辆](https://so.toutiao.com/search?keyword=比亚迪：12月新能源车销量34.1万辆)
+1. [小伙坐电动车手持烟花燃放发生碰撞](https://so.toutiao.com/search?keyword=小伙坐电动车手持烟花燃放发生碰撞)
+1. [胡锡进：祝愿2024年中国股市爆发](https://so.toutiao.com/search?keyword=胡锡进：祝愿2024年中国股市爆发)
+1. [比亚迪包揽上周新能源轿车销量前三](https://so.toutiao.com/search?keyword=比亚迪包揽上周新能源轿车销量前三)
+1. [加沙民众：新年“烟花表演”是导弹](https://so.toutiao.com/search?keyword=加沙民众：新年“烟花表演”是导弹)
+1. [上周国际油价连续第七周下跌](https://so.toutiao.com/search?keyword=上周国际油价连续第七周下跌)
+1. [媒体：A股新年开门红概率高](https://so.toutiao.com/search?keyword=媒体：A股新年开门红概率高)
+1. [加沙冲突冲击约旦旅游业](https://so.toutiao.com/search?keyword=加沙冲突冲击约旦旅游业)
+1. [绿媒主持人提问时揶揄侯友宜引不满](https://so.toutiao.com/search?keyword=绿媒主持人提问时揶揄侯友宜引不满)
+1. [和中国军人一起开启2024](https://so.toutiao.com/search?keyword=和中国军人一起开启2024)
+1. [大部分存量房贷利率下调](https://so.toutiao.com/search?keyword=大部分存量房贷利率下调)
+1. [周锡玮：台湾人需要大格局](https://so.toutiao.com/search?keyword=周锡玮：台湾人需要大格局)
+1. [世界第一高楼上演新年烟花灯光秀](https://so.toutiao.com/search?keyword=世界第一高楼上演新年烟花灯光秀)
+1. [《繁花》致敬的宁波帮是个什么帮](https://so.toutiao.com/search?keyword=《繁花》致敬的宁波帮是个什么帮)
+1. [全新凯美瑞开启预售 17.38万起](https://so.toutiao.com/search?keyword=全新凯美瑞开启预售+17.38万起)
+1. [日本：已接到至少10起人员被埋通报](https://so.toutiao.com/search?keyword=日本：已接到至少10起人员被埋通报)
+1. [美媒：拜登悄悄转变对乌克兰战略](https://so.toutiao.com/search?keyword=美媒：拜登悄悄转变对乌克兰战略)
 1. [中信证券：1月市场将迎来重要拐点](https://so.toutiao.com/search?keyword=中信证券：1月市场将迎来重要拐点)
 1. [哈尔滨热心夫妻将游客免费载回酒店](https://so.toutiao.com/search?keyword=哈尔滨热心夫妻将游客免费载回酒店)
-1. [以色列“强硬表态”能带来什么](https://so.toutiao.com/search?keyword=以色列“强硬表态”能带来什么)
-1. [《繁花》剧组亮相东方卫视跨年](https://so.toutiao.com/search?keyword=《繁花》剧组亮相东方卫视跨年)
-1. [小伙坐电动车手持烟花燃放发生碰撞](https://so.toutiao.com/search?keyword=小伙坐电动车手持烟花燃放发生碰撞)
 1. [2024年全球石油市场供需博弈将持续](https://so.toutiao.com/search?keyword=2024年全球石油市场供需博弈将持续)
-1. [2024年1月8款新车将上市](https://so.toutiao.com/search?keyword=2024年1月8款新车将上市)
-1. [比亚迪：12月新能源车销量34.1万辆](https://so.toutiao.com/search?keyword=比亚迪：12月新能源车销量34.1万辆)
 1. [2024年首次成品油调价窗口即将开启](https://so.toutiao.com/search?keyword=2024年首次成品油调价窗口即将开启)
 1. [小鹏汽车2023年总交付突破14万台](https://so.toutiao.com/search?keyword=小鹏汽车2023年总交付突破14万台)
-1. [2024年多项民生措施将推出](https://so.toutiao.com/search?keyword=2024年多项民生措施将推出)
 1. [小土豆翻墙与冰雕合照 朋友看笑了](https://so.toutiao.com/search?keyword=小土豆翻墙与冰雕合照+朋友看笑了)
-1. [理想L9和问界M9配置对比](https://so.toutiao.com/search?keyword=理想L9和问界M9配置对比)
 1. [总台大湾区新年音乐会](https://so.toutiao.com/search?keyword=总台大湾区新年音乐会)
 1. [日本石川县发生地震 中领馆发提醒](https://so.toutiao.com/search?keyword=日本石川县发生地震+中领馆发提醒)
 1. [10万人齐聚围观伦敦跨年烟花](https://so.toutiao.com/search?keyword=10万人齐聚围观伦敦跨年烟花)
